chore: hero and why us section for fence page

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -80,49 +80,41 @@ eleventyNavigation:
         <div class="cs-content">
             <span class="cs-topper">Specialties</span>
             <h2 class="cs-title">Why Choose Us</h2>
-            <p class="cs-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia incidunt quia enim mollitia delectus? Perferendis sapiente quaerat quos. Odit quasi similique nobis earum laudantium ad doloribus quos eos quod. Delectus?
-            </p>
+            <!-- <p class="cs-text"> -->
+            <!--     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia incidunt quia enim mollitia delectus? Perferendis sapiente quaerat quos. Odit quasi similique nobis earum laudantium ad doloribus quos eos quod. Delectus? -->
+            <!-- </p> -->
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
                 <div class="cs-text-group">
-                    <h3 class="cs-h3">Highly Experienced Therapists</h3>
-                    <p class="cs-item-text">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
-                    </p>
+                    <h3 class="cs-h3">Perfect for All Homes</h3>
+                    <p class="cs-item-text">We design and install custom fences and decks for both old and new homes.</p>
                 </div>
             </li>
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
                 <div class="cs-text-group">
-                    <h3 class="cs-h3">No one does outpatient like us</h3>
-                    <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
-                    </p>
+                    <h3 class="cs-h3">Durable Materials</h3>
+                    <p class="cs-item-text"> High-quality materials that stand the test of time, no matter the season.</p>
                 </div>
             </li>
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
                 <div class="cs-text-group">
-                    <h3 class="cs-h3">Perfectly Structured Sessions</h3>
-                    <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
-                    </p>
+                    <h3 class="cs-h3">Affordable Financing</h3>
+                    <p class="cs-item-text">Flexible financing options available to fit your budget.</p>
                 </div>
             </li>
             <li class="cs-item">
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
                 <div class="cs-text-group">
-                    <h3 class="cs-h3">Unique and adaptive equipment</h3>
-                    <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
-                    </p>
+                    <h3 class="cs-h3">Affordable Financing</h3>
+                    <p class="cs-item-text">Professional service that gets the job done quickly and efficiently.</p>
                 </div>
             </li>
 
@@ -130,10 +122,8 @@ eleventyNavigation:
                 <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                 <!-- Text Grouped For Flexbox-->
                 <div class="cs-text-group">
-                    <h3 class="cs-h3">Unique and adaptive equipment</h3>
-                    <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa fugiat impedit molestias vitae voluptatibus sed enim! Cupiditate ab praesentium dolorem libero veritatis beatae assumenda totam, in, nemo quis consectetur labore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, quam?
-                    </p>
+                    <h3 class="cs-h3">Trusted Local Team</h3>
+                    <p class="cs-item-text"> Proudly serving the community with years of experience. </p>
                 </div>
             </li>
         </ul>
