fix: mobile nav bar.

--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,12 @@ eleventyNavigation:
             <p class="cs-text">
             🚨 LIMITED SUMMER SPOTS for Fence & Deck Installations! 💰 Get it done now, pay later with easy financing. 👉 
             <a href="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw"
-                target="_blank" rel="noopener"
+                target="_blank" rel="noopener" 
+                style="margin-right: 1ch"
                 >
-                Click here
+                Click here 
             </a>
-            to get pre-approved!
+             to get pre-approved!
             </p>
         </div>
 
