chore: added fence & deck to nav bar

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -4,10 +4,10 @@ description: "Your Trusted Partner for Renovations and Plumbing"
 preloadImg: "/assets/images/fence/fence-bg.avif"
 permalink: "renovation/fence-deck-install/"
 eleventyNavigation:
+    key: "Fence & Deck"
+    order: "275"
 ---
 
-<!-- key: 'Fence & Deck Installation' -->
-<!-- order: '2520' -->
 <!-- parent: 'Renovation' -->
 {% extends "layouts/base.html" %} {% block head %}
 <link rel="stylesheet" href="/assets/css/fence-deck.css" />
@@ -224,7 +224,7 @@ eleventyNavigation:
     <!--                 /> -->
     <!---->
     <!--             <p class="cs-text"> -->
-    <!--                 LIMITED SUMMER SPOTS – BOOK NOW BEFORE WE’RE FULLY BOOKED! -->
+    <!--                 LIMITED SUMMER SPOTS – BOOK NOW BEFORE WE'RE FULLY BOOKED! -->
     <!--             </p> -->
     <!--         </li> -->
     <!--         </ul> -->
