chore: added og image for fence. adjusted padding in gallery page

--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -12,14 +12,13 @@ eleventyNavigation:
 {% extends "layouts/base.html" %} {% block head %}
 <link rel="stylesheet" href="/assets/css/fence-deck.css" />
 
-<meta property="og:url" content="{{ client.domain }}{{ page.url }}" />
 <meta
     property="og:image"
-    content="{{ site.url }}/assets/images/ogmontano.jpg"
+    content="{{ site.url }}/assets/images/fence/fence-og.webp"
 />
 <meta
     property="og:image:secure_url"
-    content="{{ site.url }}/assets/images/ogmontano.jpg"
+    content="{{ site.url }}/assets/images/fence/fence-og.webp"
 />
 
 <script src="/assets/js/scroller.js" defer></script>
