chore: banner change text

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,9 @@ eleventyNavigation:
         <!-- <img class="cs-img" decoding="async" src="/assets/images/canadian-flag.svg" width=100 height=50> -->
         <div class="content-mobile">
             <p class="cs-text">
-                Fence or Deck? We’ll build it – you finance it!
-                🕒 Limited summer spots -
+                <!-- Fence or Deck? We’ll build it – you finance it! -->
+                <!-- 🕒 Limited summer spots - -->
+                Need Home Improvements? We Build It! Financing Available – Limited Summer Spots! 
             <a href="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw"
                 target="_blank" rel="noopener"
                 >
