--- a/src/content/pages/renovation.html
+++ b/src/content/pages/renovation.html
@@ -11,7 +11,7 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/fence-deck.css">
+    <link rel="stylesheet" href="/assets/css/renovation.css">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
