--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -11,6 +11,7 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
+    <link rel="stylesheet" href="/assets/css/renovation.css">
     <link rel="stylesheet" href="/assets/css/fence-deck.css">
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
