--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -11,6 +11,7 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
+<!-- Added "renovation.css" because "fence-deck.css" is not working -->
     <link rel="stylesheet" href="/assets/css/renovation.css">
     <link rel="stylesheet" href="/assets/css/fence-deck.css">
 
@@ -77,7 +78,10 @@ eleventyNavigation:
                 Expert fence and deck installation services designed to elevate your outdoor space. Whether you're enhancing your home’s curb appeal or adding functionality to your business, we deliver top-tier craftsmanship and customized solutions that exceed expectations.
             </p>
         </div>
-        <ul class="cs-card-group">
+
+
+        <!-- will use inline style as "deck-fence.css" is not working  -->
+        <ul class="cs-card-group" style="grid-template-columns: repeat(8, 1fr);">
             <li class="cs-item">
                 <a href="" class="cs-link">
                     <h3 class="cs-h3">Fence Installation</h3>
