--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -13,7 +13,7 @@ eleventyNavigation:
 {% block head %}
 <!-- Added "renovation.css" because "fence-deck.css" is not working -->
     <link rel="stylesheet" href="/assets/css/renovation.css">
-    <link rel="stylesheet" href="/assets/css/fence-deck.css">
+    <!-- <link rel="stylesheet" href="/assets/css/fence-deck.css"> -->
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
