--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -11,7 +11,9 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/fence-deck.css">
+<!-- Added "renovation.css" because "fence-deck.css" is not working -->
+    <link rel="stylesheet" href="/assets/css/renovation.css">
+    <!-- <link rel="stylesheet" href="/assets/css/fence-deck.css"> -->
 
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
         <meta property="og:image" content="{{ site.url }}/assets/images/ogmontano.jpg"/>
@@ -77,7 +79,9 @@ eleventyNavigation:
             </p>
         </div>
 
-        <ul class="cs-card-group">
+
+        <!-- will use inline style as "deck-fence.css" is not working  -->
+        <ul class="cs-card-group" style="grid-template-columns: repeat(8, 1fr);">
             <li class="cs-item">
                 <a href="" class="cs-link">
                     <h3 class="cs-h3">Fence Installation</h3>
