--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -2,7 +2,7 @@
 title: 'Review| Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'review/'
+permalink: '    /'
 ---
 
 {% extends "layouts/base.html" %}
@@ -16,96 +16,7 @@ permalink: 'review/'
 {% endblock %}
 
 {% block body %}
-<style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f7f9fc;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      color: #333;
-    }
-    .container {
-      background: white;
-      padding: 2rem;
-      max-width: 600px;
-      width: 90%;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      text-align: center;
-    }
-    .logo {
-      max-width: 120px;
-      margin-bottom: 1rem;
-    }
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.5rem;
-    }
-    p.subheader {
-      color: #555;
-      margin-bottom: 2rem;
-    }
-    .stars {
-      display: flex;
-      justify-content: center;
-      gap: 0.5rem;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      cursor: pointer;
-    }
-    .star {
-      color: #ccc;
-      transition: color 0.3s ease;
-    }
-    .star:hover,
-    .star.hover,
-    .star.selected {
-      color: #fbc02d;
-    }
-    .feedback-section {
-      display: none;
-      margin-top: 1rem;
-    }
-    .textarea,
-    input[type="text"],
-    input[type="email"] {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      background: #004e92;
-      color: white;
-      border: none;
-      padding: 0.75rem 2rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .google-review {
-      margin-top: 1rem;
-    }
-    .powered {
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: #888;
-    }
-    .powered a {
-      color: #888;
-      text-decoration: none;
-    }
-    .powered a:hover {
-      text-decoration: underline;
-    }
-  </style>
-  
+
 <!-- -------------- -->
 <!--     Review     -->
 <!-- -------------- -->
@@ -152,6 +63,8 @@ permalink: 'review/'
     </div>
   </div>
 
+
+  <!-- script -->
   <script>
     const stars = document.querySelectorAll('.star');
     const starContainer = document.getElementById('starContainer');
