--- a/src/content/pages/fence-deck-installation.html
+++ b/src/content/pages/fence-deck-installation.html
@@ -90,9 +90,9 @@ eleventyNavigation:
                 </p>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/basementdev.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/basementdev.jpg">
-                    <img decoding="async" src="/assets/images/basementdev.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/fence.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/fence.jpg">
+                    <img decoding="async" src="/assets/images/fence.jpg" alt="construction" width="413" height="374" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -103,9 +103,9 @@ eleventyNavigation:
                     </p>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/washroomreno.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/washroomreno.jpg">
-                    <img decoding="async" src="/assets/images/washroomreno.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/deck.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/deck.jpg">
+                    <img decoding="async" src="/assets/images/deck.jpg" alt="construction" width="413" height="374" aria-hidden="true">
                 </picture>
             </li>
         </ul>
