--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -90,33 +90,27 @@ permalink: 'review/'
     }
   </style> -->
 
-<!-- -------------- -->
-<!--     Review     -->
-<!-- -------------- -->
-    <section class="review">
-        <div class="container">
-            <div class="Logo"></div>
-            <div class="content">
-                <h2 class="title">Thank You for Choosing Montano Plumbing & Contracting</h2>
-                <p class="cs-text">
-                    We’re grateful you trusted us with your plumbing and contracting needs.  <br>
-                    Please take a moment to rate your experience. <br><br>
-                    <strong>
-                        If you’re satisfied with our service, please select 4 or 5 stars and leave us a Google review. <br>
-                        If your experience was anything less than great, we’d love your honest feedback so we can make it right.
-                    </strong>
-                </p>
-                <div class="stars" id="starContainer">
-                    <span class="star" data-rating="1">★</span>
-                    <span class="star" data-rating="2">★</span>
-                    <span class="star" data-rating="3">★</span>
-                    <span class="star" data-rating="4">★</span>
-                    <span class="star" data-rating="5">★</span>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="google-review">
+  <div class="container">
+    <img src="https://via.placeholder.com/120x60?text=MPC+Logo" alt="MPC Logo" class="logo" />
+    <h1>Thank You for Choosing Montano Plumbing & Contracting</h1>
+    <p class="subheader">
+      We’re grateful you trusted us with your plumbing and contracting needs. Please take a moment to rate your experience.
+      <br /><br />
+      <strong>If you’re satisfied with our service, please select 4 or 5 stars and leave us a Google review.</strong><br />
+      <strong>If your experience was anything less than great, we’d love your honest feedback so we can make it right.</strong>
+    </p>
+
+    <div class="stars" id="starContainer">
+      <span class="star" data-rating="1">★</span>
+      <span class="star" data-rating="2">★</span>
+      <span class="star" data-rating="3">★</span>
+      <span class="star" data-rating="4">★</span>
+      <span class="star" data-rating="5">★</span>
+    </div>
+
+    <div id="goodFeedback" class="feedback-section">
+      <p>Thank you! We're thrilled you’re happy with our service. Please click below to leave us a Google review:</p>
+      <div class="google-review">
         <a href="https://g.page/r/CeEus-m9a-QSEB0/review" target="_blank">
           <button>Leave a Google Review</button>
         </a>
