--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -16,7 +16,7 @@ permalink: 'review/'
 {% endblock %}
 
 {% block body %}
-<!-- <style>
+<style>
     .container {
       background: white;
       padding: 2rem;
@@ -88,7 +88,7 @@ permalink: 'review/'
     .powered a:hover {
       text-decoration: underline;
     }
-  </style> -->
+  </style>
 
   <div class="container">
     <img src="https://via.placeholder.com/120x60?text=MPC+Logo" alt="MPC Logo" class="logo" />
