--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -25,6 +25,9 @@ permalink: 'review/'
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       text-align: center;
+      padding: var(--sectionPadding);
+      margin-top: 15rem;
+      margin-bottom: 5rem;
     }
     h1 {
       font-size: 1.8rem;
