--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -3,6 +3,8 @@ title: 'Review| Montano Plumbing & Contracting LTD.'
 description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'review/'
+
+
 ---
 
 {% extends "layouts/base.html" %}
@@ -94,7 +96,7 @@ permalink: 'review/'
   </style>
 
   <div class="container">
-    <img src="https://via.placeholder.com/120x60?text=MPC+Logo" alt="MPC Logo" class="logo" />
+    <img src="/assets/images/MPCLogo11.png" alt="MPC Logo" class="logo" />
     <h1>Thank You for Choosing Montano Plumbing & Contracting</h1>
     <p class="subheader">
       We’re grateful you trusted us with your plumbing and contracting needs. Please take a moment to rate your experience.
