--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -31,6 +31,9 @@ permalink: 'review/'
       margin-top: 15rem;
       margin-bottom: 5rem;
     }
+    .logo{
+        width: 100%;
+    }
     h1 {
       font-size: 1.8rem;
       margin-bottom: 0.5rem;
