--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -118,7 +118,10 @@ permalink: 'review/'
     <div id="goodFeedback" class="feedback-section">
       <p>Thank you! We're thrilled you’re happy with our service. Please click below to leave us a Google review:</p>
       <div class="google-review">
-        <a href="https://g.page/r/CeEus-m9a-QSEB0/review" target="_blank">
+        <a href="https://www.facebook.com/yeg.mpc/reviews" target="_blank">
+            <button>Leave a Facebook Review</button>
+        </a>
+        <a href="https://maps.app.goo.gl/E5q5L71koyxKWpck8" target="_blank">
           <button>Leave a Google Review</button>
         </a>
       </div>
