--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -19,7 +19,7 @@ permalink: 'review/'
 
 {% block body %}
 <style>
-    .container {
+    .review-container {
       background: white;
       padding: 2rem;
       max-width: 600px;
@@ -30,14 +30,14 @@ permalink: 'review/'
       margin-top: 15rem;
       margin-bottom: 5rem;
     }
-    .logo{
+    .review-logo{
         width: 100%;
     }
-    h1 {
+    .review-h1 {
       font-size: 1.8rem;
       margin-bottom: 0.5rem;
     }
-    p.subheader {
+    p.review-subheader {
       color: #555;
       margin-bottom: 2rem;
     }
@@ -49,7 +49,7 @@ permalink: 'review/'
       margin-bottom: 1rem;
       cursor: pointer;
     }
-    .star {
+    .review-star {
       color: #ccc;
       transition: color 0.3s ease;
     }
@@ -58,7 +58,7 @@ permalink: 'review/'
     .star.selected {
       color: #fbc02d;
     }
-    .feedback-section {
+    .review-feedback-section {
       display: none;
       margin-top: 1rem;
     }
@@ -71,7 +71,7 @@ permalink: 'review/'
       border: 1px solid #ccc;
       border-radius: 8px;
     }
-    button {
+    .review-button {
       background: #004e92;
       color: white;
       border: none;
@@ -79,9 +79,12 @@ permalink: 'review/'
       font-size: 1rem;
       border-radius: 8px;
       cursor: pointer;
+      width: 100%;
+      margin-bottom: 1rem;
     }
-    .google-review {
+    .review-buttons {
       margin-top: 1rem;
+      
     }
     .powered {
       margin-top: 2rem;
@@ -97,17 +100,17 @@ permalink: 'review/'
     }
   </style>
 
-  <div class="container">
-    <img src="/assets/images/MPCLogo11.png" alt="MPC Logo" class="logo" />
-    <h1>Thank You for Choosing Montano Plumbing & Contracting</h1>
-    <p class="subheader">
+  <div class="review-container">
+    <img src="/assets/images/MPCLogo11.png" alt="MPC Logo" class="review-logo" />
+    <h1 class="review-h1">Thank You for Choosing Montano Plumbing & Contracting</h1>
+    <p class="review-subheader">
       We’re grateful you trusted us with your plumbing and contracting needs. Please take a moment to rate your experience.
       <br /><br />
       <strong>If you’re satisfied with our service, please select 4 or 5 stars and leave us a Google review.</strong><br />
       <strong>If your experience was anything less than great, we’d love your honest feedback so we can make it right.</strong>
     </p>
 
-    <div class="stars" id="starContainer">
+    <div class="review-stars" id="starContainer">
       <span class="star" data-rating="1">★</span>
       <span class="star" data-rating="2">★</span>
       <span class="star" data-rating="3">★</span>
@@ -115,14 +118,14 @@ permalink: 'review/'
       <span class="star" data-rating="5">★</span>
     </div>
 
-    <div id="goodFeedback" class="feedback-section">
+    <div id="goodFeedback" class="review-feedback-section">
       <p>Thank you! We're thrilled you’re happy with our service. Please click below to leave us a Google review:</p>
-      <div class="google-review">
+      <div class="review-buttons">
         <a href="https://www.facebook.com/yeg.mpc/reviews" target="_blank">
-            <button>Leave a Facebook Review</button>
+            <button class="review-button">Leave a Facebook Review</button>
         </a>
         <a href="https://maps.app.goo.gl/E5q5L71koyxKWpck8" target="_blank">
-          <button>Leave a Google Review</button>
+          <button class="review-button">Leave a Google Review</button>
         </a>
       </div>
     </div>
