--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -27,6 +27,7 @@ permalink: 'review/'
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       text-align: center;
+      margin: auto;
       margin-top: 15rem;
       margin-bottom: 5rem;
     }
@@ -135,7 +136,7 @@ permalink: 'review/'
       <textarea class="textarea" rows="4" placeholder="Tell us what happened..."></textarea>
       <input type="text" placeholder="Your name (optional)" />
       <input type="email" placeholder="Your email or phone (optional)" />
-      <button onclick="sendFeedback()">Submit Feedback</button>
+      <button class="review-button" onclick="sendFeedback()">Submit Feedback</button>
     </div>
 
     <div class="powered">
