--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -185,6 +185,16 @@ permalink: 'review/'
         }
       });
     }
+    function selectStars(rating) {
+      stars.forEach(star => {
+        const starRating = parseInt(star.getAttribute('data-rating'));
+        if (starRating <= rating) {
+          star.classList.add('selected');
+        } else {
+          star.classList.remove('selected');
+        }
+      });
+    }
 
     function sendFeedback() {
       const message = document.querySelector('#badFeedback textarea').value.trim();
