--- a/src/content/pages/review.html
+++ b/src/content/pages/review.html
@@ -187,6 +187,18 @@ eleventyNavigation:
       });
     }
 
+
+    function highlightSelectedStars(rating) {
+      stars.forEach(star => {
+        const starRating = parseInt(star.getAttribute('data-rating'));
+        if (starRating <= rating) {
+          star.classList.add('selected');
+        } else {
+          star.classList.remove('selected');
+        }
+      });
+    }
+
     function sendFeedback() {
       const message = document.querySelector('#badFeedback textarea').value.trim();
       const name = document.querySelector('#badFeedback input[type="text"]').value.trim();
@@ -202,15 +214,7 @@ eleventyNavigation:
     }
 
 
-    function highlightStars(rating) {
-    stars.forEach(star => {
-      const starRating = parseInt(star.getAttribute('data-rating'));
-      if (starRating <= rating) {
-        star.classList.add('selected');
-      } else {
-        star.classList.remove('selected');
-      }
-    });
+    
   </script>
 
 {% endblock %}
